Aligned text correctly in KeyManagement

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,7 +26,7 @@
   padding: 5px;
   border-radius: 8px;
   width:90%;
-  
+  text-align: center;
 }
 
 .test{
@@ -99,3 +99,5 @@
   box-shadow: 1px 2px rgb(156, 178, 212);
   width:auto;
 }
+
+
